hard-gists/614fc39a78d028c9dce9/run.log
=== Docker Run Log for 614fc39a78d028c9dce9 ===
Started at: Mi 29. Okt 16:21:23 CET 2025

[2025-10-29 16:21:23] START: Running container for 614fc39a78d028c9dce9
[2025-10-29 16:21:24] SUCCESS: Container 55d28fd4c5878aa51a1434479caf4392852458559dbb2c326f2609f6e2339627 started for 614fc39a78d028c9dce9
=== Container logs for 614fc39a78d028c9dce9 ===
  File "/snippet.py", line 245
    except ScriptError, e:
           ^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 614fc39a78d028c9dce9 ===
[2025-10-29 16:21:26] INFO: Container 55d28fd4c5878aa51a1434479caf4392852458559dbb2c326f2609f6e2339627 has stopped
